--- a/css/style.css
+++ b/css/style.css
@@ -775,6 +775,13 @@ header .logo-container img {
    color: var(--main-color);
 }
 
+.author-profile-pic {
+   width: 40px;
+   height: 40px;
+   border-radius: 50%;
+   margin-right: 10px;
+   object-fit: cover;
+}
 /* 10. Categories Section */
 .categories .box-container {
    border: var(--border);
